--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "url redirect app",
   "main": "index.js",
   "scripts": {
-    "dev": "micro-dev",
-    "test": "echo \"lol yeah right\" && exit 1"
+    "dev": "now dev"
+  },
+  "engines": {
+    "node": "^10.x"
   },
   "repository": {
     "type": "git",
@@ -20,10 +22,5 @@
   "bugs": {
     "url": "https://github.com/mikemcbride/mcbride-short-urls/issues"
   },
-  "homepage": "https://github.com/mikemcbride/mcbride-short-urls#readme",
-  "dependencies": {},
-  "devDependencies": {
-    "micro": "^9.3.3",
-    "micro-dev": "^3.0.0"
-  }
+  "homepage": "https://github.com/mikemcbride/mcbride-short-urls#readme"
 }
