--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,6 +3,9 @@ name = "mcbride-short-urls"
 main = "src/index.js"
 compatibility_date = "2024-12-16"
 compatibility_flags = ["nodejs_compat"]
+routes = [
+	{ pattern = "mcbrides.us", custom_domain = true }
+]
 
 # Workers Logs
 # Docs: https://developers.cloudflare.com/workers/observability/logs/workers-logs/
